# Tristeon

./: .gitignore  .gitmodules  .travis.yml  BuildCMakeLists.cmake  CMakeLists.txt  Doxyfile  EditorCMakeLists.cmake  LICENSE  Makefile  README.md  build-doxygen.bat  make.bat
.github/workflows/: cmake.yml
cmake/: QtLocator.cmake
docs/: .buildinfo  Doxyfile  api.html  build-docs.bat  documentation.html  genindex.html  home.html  index.html  make.bat  objects.inv  searchindex.js  showcase.html  tutorials.html
docs/_sources/: api.rst.txt  documentation.rst.txt  home.rst.txt  index.rst.txt  tutorials.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: api.doctree  documentation.doctree  environment.pickle  home.doctree  index.doctree  links.doctree  showcase.doctree  tutorials.doctree
docs/html/: .buildinfo  api.html  documentation.html  genindex.html  index.html  links.html  objects.inv  search.html
docs/html/_sources/: documentation.rst.txt  links.rst.txt  showcase.rst.txt
docs/source/: api.rst  index.rst
doctrees/: api.doctree  documentation.doctree  environment.pickle  home.doctree  index.doctree  links.doctree  showcase.doctree  tutorials.doctree
examples/Lost Crypt/: Scene.scene  settings.tristeon
examples/Lost Crypt/Tilesets/: GrassFiller1.tileset  GrassFiller2.tileset  GrassFiller3.tileset  GrassStrip1.tileset  GrassStrip2.tileset  GrassStrip3.tileset  GrassStrip4.tileset
examples/Project/: AnimClip.clip  CharacterWalk.clip  GoldBricks.tileset  NormalMapped.scene  Scene.scene  TilesetTest.tileset  settings.tristeon
examples/Project/NormalMapHintsAssets/: Bricks.tileset  Player.clip  Tiles.tileset
include/: wav_loader.hpp
source/: api.rst  conf.py  documentation.rst
src/: AssetDatabase.cpp  AssetDatabase.h  Collector.h  Engine.cpp  Engine.h  GameMain.cpp  GameWindow.cpp  GameWindow.h  InstanceCollector.cpp  InstanceCollector.h  InstanceReference.h  Project.cpp  Project.h  Resources.cpp  Resources.h  Settings.cpp  Settings.h  TObject.h  TypeDefinitions.cpp  TypeDefinitions.h  Window.cpp  Window.h  main.cpp
src/Actors/: Actor.cpp  Actor.h  AnimationSprite.cpp  AnimationSprite.h  Camera.cpp  Camera.h  Collector.h  Sprite.cpp  Sprite.h
src/Actors/Behaviours/: AnimationSprite.cpp  AnimationSprite.h  Behaviour.cpp  Behaviour.h  BehaviourCollector.h  Sprite.cpp  Sprite.h  SpriteBehaviour.cpp  SpriteBehaviour.h  TestBehaviour.cpp  TestBehaviour.h
src/Animations/: AnimationClip.cpp  AnimationClip.h
src/AssetManagement/: AssetDatabase.cpp  AssetDatabase.h  FileExtensionRegister.h  MetaFile.cpp  MetaFile.h  Resources.cpp  Resources.h  TextureMetaFile.cpp  TextureMetaFile.h
src/AssetManagement/Domains/: AssetsDomain.cpp  AssetsDomain.h  Domain.h  EngineDomain.cpp  EngineDomain.h  LocalDomain.cpp  LocalDomain.h
src/AssetManagement/MetaFiles/: MetaFile.cpp  MetaFile.h  SerializableMetaFile.cpp  SerializableMetaFile.h  TextureMetaFile.cpp  TextureMetaFile.h
src/Audio/: Audio.cpp  Audio.h  AudioClip.cpp  AudioClip.h  AudioListener.cpp  AudioListener.h  AudioMetaFile.cpp  AudioMetaFile.h  AudioSource.cpp  AudioSource.h
src/Callbacks/: ICallback.h  IDrawGizmos.h  IEarlyUpdate.h  IFixedUpdate.h  IInit.h  ILateUpdate.h  IPreDestroy.h  ISceneLoaded.h  IStart.h  IUpdate.h
src/Collectors/: Collector.h  InstanceCollector.cpp  InstanceCollector.h
src/Editor/: DockWidget.h  Editor.cpp  Editor.h  EditorCameraController.cpp  EditorCameraController.h  EditorFields.cpp  EditorFields.h  EditorMain.cpp  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  FileExplorer.cpp  FileExplorer.h  GameView.cpp  GameView.h  GameViewEditor.cpp  GameViewEditor.h  LayerEditor.cpp  LayerEditor.h  LayerListEditor.cpp  LayerListEditor.h  MenuBar.cpp  MenuBar.h  Palette.h  ProjectWindow.cpp  ProjectWindow.h  PropertyWindow.cpp  PropertyWindow.h  TileSetEditor.cpp  TileSetEditor.h  TileSetTab.cpp  TileSetTab.h  TilesetEditor.cpp  TilesetEditor.h  TilesetTab.cpp  TilesetTab.h  TopBar.cpp  TopBar.h
src/Editor/AssetExplorer/: ContentViewer.cpp  ContentViewer.h  DirectoryViewer.cpp  DirectoryViewer.h  FileExplorer.cpp  FileExplorer.h  Importer.cpp  (+3 more)
src/Environment/: Compiler.h  Platform.h
src/FileTypes/: Image.cpp  Image.h  ImageBatch.cpp  ImageBatch.h  TileSet.cpp  TileSet.h
src/Game/: GameMain.cpp  GameWindow.cpp  GameWindow.h
src/Input/: Gamepad.cpp  Gamepad.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Math/: Math.cpp  Math.h  Vector.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Physics/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  CollisionListener.cpp  CollisionListener.h  Contact.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  RaycastResult.cpp  RaycastResult.h  TileContact.h
src/Primitives/: String.cpp  String.h
src/Registers/: ActorRegister.h  BehaviourRegister.h  LayerRegister.h  Register.h
src/Rendering/: AnimationSprite.cpp  AnimationSprite.h  Camera.cpp  Camera.h  DebugGL.cpp  DebugGL.h  Framebuffer.cpp  Framebuffer.h  GLContext.cpp  GLContext.h  GameView.cpp  GameView.h  Gizmos.cpp  Gizmos.h  Graphic.cpp  Graphic.h  Grid.cpp  Grid.h  RenderMask.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderMode.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/Scenes/: Camera.cpp  Camera.h  HUD.cpp  HUD.h  Layer.cpp  Layer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TileLayer.cpp  TileLayer.h  TiledLayer.cpp  TiledLayer.h
src/Serialization/: InstancedSerializable.cpp  InstancedSerializable.h  JsonSerializer.cpp  JsonSerializer.h  Register.h  Serializable.h  Type.h  TypeRegister.h  Typename.h
src/Standard/: Delegate.h  List.h  String.h  Unique.h
src/Utils/: ClassDefaults.h  Colour.h  Console.cpp  Console.h  Delegate.h  List.h  NotImplementedException.h  Random.cpp  Random.h  Singleton.h  StringHelper.cpp  StringHelper.h  Time.cpp  Time.h  TypeDefinitions.h  Vector.h
tests/: CMakeLists.txt
tests/src/Math/: Math.cpp  Vector.cpp
(+159 files in other folders)
